Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-48661

QtWebEngine crashes in QTouchEvent::TouchPoint::pos()

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.6.1
    • 5.5.0, 5.6.0 RC
    • WebEngine
    • None
    • OSX 10.10.5
    • 9cdd03b44a09b6b40656d4a494f58384007d8aac

    Description

      The application uses PyQt5 packaged by PyInstaller.

      The crash is intermittant and It does not happen on every machine that I have used it on. On the machines that have this crash it seems random as to when it will crash. Sometimes it's the first time a QtWebEngine browser dialog is opened, sometimes it's the fourth. I am currently working on isolating the problem.

      Stack trace from OSX crash report.

      OS Version: Mac OS X 10.10.5 (14F27)

      Crashed Thread: 0 CrBrowserMain Dispatch queue: com.apple.main-thread

      Exception Type: EXC_BAD_ACCESS (SIGSEGV)
      Exception Codes: KERN_INVALID_ADDRESS at 0x000000000000000c

      VM Regions Near 0xc:
      -->
      __TEXT 0000000000001000-0000000000007000 [ 24K] r-x/rwx SM=COW /Applications/MyApp.app/Contents/MacOS/MyApp

      Thread 0 Crashed:: CrBrowserMain Dispatch queue: com.apple.main-thread
      0 QtGui 0x0626aef1 QTouchEvent::TouchPoint::pos() const + 17
      1 QtWebEngineCore 0x07b93135 QtWebEngineCore::MotionEventQt::GetX(unsigned long) const + 37
      2 QtWebEngineCore 0x099f1faf ui::GestureEventDataPacket::FromTouch(ui::MotionEvent const&) + 79
      3 QtWebEngineCore 0x099eff51 ui::FilteredGestureProvider::OnTouchEvent(ui::MotionEvent const&) + 81
      4 QtWebEngineCore 0x07b91620 QtWebEngineCore::RenderWidgetHostViewQt::processMotionEvent(ui::MotionEvent const&) + 48
      5 QtWebEngineCore 0x07b909a2 QtWebEngineCore::RenderWidgetHostViewQt::handleTouchEvent(QTouchEvent*) + 226
      6 QtWebEngineCore 0x07b903b1 QtWebEngineCore::RenderWidgetHostViewQt::forwardEvent(QEvent*) + 401
      7 QtWebEngineCore 0x07b9134d non-virtual thunk to QtWebEngineCore::RenderWidgetHostViewQt::forwardEvent(QEvent*) + 29
      8 QtWebEngineWidgets 0x07711a4a QtWebEngineCore::RenderWidgetHostViewQtDelegateWidget::event(QEvent*) + 154
      9 QtWidgets 0x05c0e835 QApplicationPrivate::notify_helper(QObject*, QEvent*) + 277
      10 QtWidgets 0x05c11ba0 QApplication::notify(QObject*, QEvent*) + 8256
      11 PyQt5.QtWidgets.so 0x06c1a90b meth_QApplication_notify(_object*, _object*) + 203
      12 Python 0x0441ca7b PyCFunction_Call + 363
      13 Python 0x0447d4c4 PyEval_EvalFrameEx + 19124
      14 Python 0x044785ad PyEval_EvalCodeEx + 1453
      15 Python 0x04402827 function_call + 375
      16 Python 0x043db9a3 PyObject_Call + 99
      17 Python 0x043e8b7c instancemethod_call + 220
      18 Python 0x043db9a3 PyObject_Call + 99
      19 Python 0x0447efc1 PyEval_CallObjectWithKeywords + 97
      20 sip.so 0x057c7dfb sip_api_call_method + 81
      21 PyQt5.QtCore.so 0x05093cbc sipVH_QtCore_26(PyGILState_STATE, void (_sipSimpleWrapper*, PyGILState_STATE), _sipSimpleWrapper*, _object*, QObject*, QEvent*) + 108
      22 PyQt5.QtWidgets.so 0x06c195f5 sipQApplication::notify(QObject*, QEvent*) + 133
      23 QtCore 0x053d94b0 QCoreApplication::notifyInternal(QObject*, QEvent*) + 112
      24 QtWidgets 0x05c14c61 QApplicationPrivate::translateTouchCancel(QTouchDevice*, unsigned long) + 449
      25 QtWidgets 0x05c71077 QWidgetWindow::event(QEvent*) + 279
      26 QtWidgets 0x05c0e835 QApplicationPrivate::notify_helper(QObject*, QEvent*) + 277
      27 QtWidgets 0x05c11ba0 QApplication::notify(QObject*, QEvent*) + 8256
      28 PyQt5.QtWidgets.so 0x06c1a90b meth_QApplication_notify(_object*, _object*) + 203
      29 Python 0x0441ca7b PyCFunction_Call + 363
      30 Python 0x0447d4c4 PyEval_EvalFrameEx + 19124
      31 Python 0x044785ad PyEval_EvalCodeEx + 1453
      32 Python 0x04402827 function_call + 375
      33 Python 0x043db9a3 PyObject_Call + 99
      34 Python 0x043e8b7c instancemethod_call + 220
      35 Python 0x043db9a3 PyObject_Call + 99
      36 Python 0x0447efc1 PyEval_CallObjectWithKeywords + 97
      37 sip.so 0x057c7dfb sip_api_call_method + 81
      38 PyQt5.QtCore.so 0x05093cbc sipVH_QtCore_26(PyGILState_STATE, void (_sipSimpleWrapper*, PyGILState_STATE), _sipSimpleWrapper*, _object*, QObject*, QEvent*) + 108
      39 PyQt5.QtWidgets.so 0x06c195f5 sipQApplication::notify(QObject*, QEvent*) + 133
      40 QtCore 0x053d94b0 QCoreApplication::notifyInternal(QObject*, QEvent*) + 112
      41 QtGui 0x06253155 QGuiApplicationPrivate::processTouchEvent(QWindowSystemInterfacePrivate::TouchEvent*) + 5189
      42 QtGui 0x0623b44a QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 346
      43 libqcocoa.dylib 0x100b3a19 QCocoaEventDispatcherPrivate::processPostedEvents() + 201
      44 libqcocoa.dylib 0x100b431d QCocoaEventDispatcherPrivate::postedEventsSourceCallback(void*) + 29
      45 com.apple.CoreFoundation 0x921f712f _CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION_ + 15
      46 com.apple.CoreFoundation 0x921e8bbd __CFRunLoopDoSources0 + 253
      47 com.apple.CoreFoundation 0x921e80f2 __CFRunLoopRun + 994
      48 com.apple.CoreFoundation 0x921e7aa6 CFRunLoopRunSpecific + 390
      49 com.apple.CoreFoundation 0x921e790b CFRunLoopRunInMode + 123
      50 com.apple.HIToolbox 0x9a4a18f8 RunCurrentEventLoopInMode + 262
      51 com.apple.HIToolbox 0x9a4a1503 ReceiveNextEventCommon + 192
      52 com.apple.HIToolbox 0x9a4a142c _BlockUntilNextEventMatchingListInModeWithFilter + 99
      53 com.apple.AppKit 0x969a3b41 _DPSNextEvent + 742
      54 com.apple.AppKit 0x969a31e5 -[NSApplication nextEventMatchingMask:untilDate:inMode:dequeue:] + 350
      55 com.apple.AppKit 0x96b85445 -[NSApplication _realDoModalLoop:peek:] + 823
      56 com.apple.AppKit 0x96b850ff -[NSApplication _doModalLoop:peek:] + 207
      57 com.apple.AppKit 0x96dd59de -[NSApplication runModalSession:] + 121
      58 libqcocoa.dylib 0x100b305e QCocoaEventDispatcher::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 2078
      59 QtCore 0x053d6963 QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 435
      60 QtCore 0x053d9a9e QCoreApplication::exec() + 334
      61 PyQt5.QtWidgets.so 0x06c1a30c meth_QApplication_exec_(_object*, _object*) + 92
      62 Python 0x0441ca7b PyCFunction_Call + 363
      63 Python 0x0447d4c4 PyEval_EvalFrameEx + 19124
      64 Python 0x0447f881 fast_function + 369
      65 Python 0x0447b9de PyEval_EvalFrameEx + 12238
      66 Python 0x044785ad PyEval_EvalCodeEx + 1453
      67 Python 0x04477ff7 PyEval_EvalCode + 87
      68 Python 0x0449fb1d PyRun_SimpleStringFlags + 157
      69 Python 0x044a12f9 PyRun_SimpleString + 25
      70 org.qt-project.Qt.QtWebEngineCore 0x00003257 0x1000 + 8791
      71 org.qt-project.Qt.QtWebEngineCore 0x00003714 0x1000 + 10004
      72 org.qt-project.Qt.QtWebEngineCore 0x00002115 0x1000 + 4373

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            alexandru.croitor Alexandru Croitor
            glennr Glenn Ramsey
            Votes:
            1 Vote for this issue
            Watchers:
            7 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes